<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, JankenActivity!</string>
    <string name="app_name">Annoy Janken</string>
    <string name="clearHistoryString">Clear history</string>
    <string name="clearStatsString">Clear stats</string>
    <string name="showStatsDialogString">Show Stats</string>
    <string name="statsString">AnnoyJanken Statistics</string>
    <string name="totalLabelString">Total games:</string>
    <string name="playerLabelString">Player wins:</string>
    <string name="cpuLabelString">Cpu wins:</string>
    <string name="tieLabelString">Ties:</string>
    <string name="dataSizeLabelString">Learning history size:</string>
    <string name="versionTextString">Version: 2012.35-1</string>
    <string name="copyrightTextString">(C) Jussi Niskanen 2012</string>
    <string name="emailTextString">jussini@gmail.com</string>
    <string name="websiteTextString">http://ankkatalo.net/janken</string>
    <string name="aboutString">About</string>
    <string name="aboutTitleString">AnnoyJanken</string>

</resources>